Included tekxit in image, fixed memory allocation